@@ -1,17 +1,26 @@
 package com.fieldservicemanagement.field_service_management.service.impl;
 
 import com.fieldservicemanagement.field_service_management.common.dto.WorkOrderStatusHistoryDTO;
+import com.fieldservicemanagement.field_service_management.common.response.PageResponse;
+import com.fieldservicemanagement.field_service_management.config.helper.Utils;
+import com.fieldservicemanagement.field_service_management.entity.WorkOrderStatusHistory;
 import com.fieldservicemanagement.field_service_management.enums.WorkStatus;
 import com.fieldservicemanagement.field_service_management.exception.CustomNotFoundException;
 import com.fieldservicemanagement.field_service_management.repository.WorkOrderRepository;
 import com.fieldservicemanagement.field_service_management.repository.WorkOrderStatusHistoryRepository;
 import com.fieldservicemanagement.field_service_management.repository.UsersRepository;
 import com.fieldservicemanagement.field_service_management.service.WorkOrderStatusHistoryService;
+import jakarta.persistence.EntityManager;
+import jakarta.persistence.PersistenceContext;
+import jakarta.persistence.criteria.CriteriaBuilder;
+import jakarta.persistence.criteria.CriteriaQuery;
+import jakarta.persistence.criteria.Predicate;
+import jakarta.persistence.criteria.Root;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
+import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -20,6 +29,9 @@ public class WorkOrderStatusHistoryServiceImpl implements WorkOrderStatusHistory
     private final WorkOrderStatusHistoryRepository historyRepository;
     private final WorkOrderRepository workOrderRepository;
     private final UsersRepository userRepository;
+
+    @PersistenceContext
+    private final EntityManager entityManager;
 
     // Create Status History
     public WorkOrderStatusHistoryDTO createHistory(WorkOrderStatusHistoryDTO history) {
@@ -58,12 +70,59 @@ public class WorkOrderStatusHistoryServiceImpl implements WorkOrderStatusHistory
     }
 
     // Get All History
-    public List<WorkOrderStatusHistoryDTO> getAllHistory() {
 
-        return historyRepository.findAll()
+    @Override
+    public PageResponse<WorkOrderStatusHistoryDTO> getPage(int page, int size, Long workOrderId) {
+
+        CriteriaBuilder cb = entityManager.getCriteriaBuilder();
+        CriteriaQuery<WorkOrderStatusHistory> cq = cb.createQuery(WorkOrderStatusHistory.class);
+
+        Root<WorkOrderStatusHistory> root = cq.from(WorkOrderStatusHistory.class);
+
+        Predicate predicate = getPredicateList(cb, root, workOrderId);
+
+        cq.select(root);
+        cq.where(predicate);
+        cq.orderBy(cb.desc(root.get("id")));
+
+        List<WorkOrderStatusHistoryDTO> content = entityManager.createQuery(cq)
+                .setFirstResult(page * size)
+                .setMaxResults(size)
+                .getResultList()
                 .stream()
                 .map(this::mapToDTO)
-                .collect(Collectors.toList());
+                .toList();
+
+        Long count = getCount(cb, entityManager, workOrderId);
+
+        if (content.isEmpty()) {
+            return PageResponse.defaultPage();
+        }
+
+        return new PageResponse<>(page, size, count, content);
+    }
+
+    public Predicate getPredicateList(CriteriaBuilder cb, Root<WorkOrderStatusHistory> root, Long workOrderId) {
+
+        List<Predicate> predicateList = new ArrayList<>();
+
+        if (Utils.isPresent(workOrderId)) {
+            predicateList.add(cb.like(root.get("workOrderId"), "%" + workOrderId + "%"));
+        }
+
+        return cb.and(predicateList.toArray(new Predicate[0]));
+    }
+
+    public Long getCount(CriteriaBuilder cb, EntityManager entityManager, Long workOrderId) {
+
+        CriteriaQuery<Long> query = cb.createQuery(Long.class);
+
+        Root<WorkOrderStatusHistory> root = query.from(WorkOrderStatusHistory.class);
+
+        Predicate newPredicate = this.getPredicateList(cb, root, workOrderId);
+        query.select(cb.count(root)).where(newPredicate);
+
+        return entityManager.createQuery(query).getSingleResult();
     }
     // Delete History
     public void deleteHistory(Long id) {
